--- a/WebDev/static/css/main.css
+++ b/WebDev/static/css/main.css
@@ -48,7 +48,7 @@ body {
 }
 
 .topnav-left {
-    float: right;
+    float: left;
 }
 /* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
 @media screen and (max-width: 600px) {
